--- a/contact-us.html
+++ b/contact-us.html
@@ -447,7 +447,7 @@
                 </li>
                 <li class="flex-three">
                     <i class="icon-Group-9"></i>
-                    <p class="phones" > +357 95 11 29 20 </p>
+                    <span style="color: black;" > +357 95 11 29 20 </span>
                 </li>
                 <li class="flex-three">
                     <i class="icon-Layer-19"></i>
@@ -462,7 +462,7 @@
                 </li>
                 <li>
                     <a href="https://wa.me/+357 95 11 29 20?text=Welcome to Journeycyprus how can we help you?">
-                        <i class="icon-icon-1"></i>
+                        <i class="bi bi-whatsapp"></i>
                     </a>
                 </li>
                 <li>
@@ -472,14 +472,13 @@
                 </li>
                 <li>
                     <a href="https://m.me/Journey-of-wonder">
-                        <i class="icon-6"></i>
+                        <i class="bi bi-messenger"></i>
                     </a>
                 </li>
             </ul>
 
         </div>
     </div>
-
     <!-- Javascript -->
     <script src="app/js/jquery.min.js"></script>
     <script src="app/js/jquery.nice-select.min.js"></script>
