--- a/Quad.html
+++ b/Quad.html
@@ -753,6 +753,57 @@ Our trained staff will guide you on a 2+ hour awe-inspiring trip with 2 stops fo
         </div>
         <!-- /#page -->
     </div>
+
+    <a id="scroll-top" class="button-go"></a>
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight">
+        <div class="offcanvas-header">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="logo-canvas">
+                <img src="./assets/images/logo2.png" alt="image">
+            </div>
+            
+            <ul class="canvas-info">
+                <li class="flex-three">
+                    <i class="icon-noun-mail-5780740-1"></i>
+                    <p>contact@journeycyprus.com</p>
+                </li>
+                <li class="flex-three">
+                    <i class="icon-Group-9"></i>
+                    <span style="color: black;" > +357 95 11 29 20 </span>
+                </li>
+                <li class="flex-three">
+                    <i class="icon-Layer-19"></i>
+                    <p>96 ERMOU, 6022 LARNACA, CYPRUS </p>
+                </li>
+            </ul>
+            <ul class="social flex-three">
+                <li>
+                    <a href="https://www.facebook.com/share/1YJrysxhbG/?mibextid=wwXIfr">
+                        <i class="icon-icon-2"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/+357 95 11 29 20?text=Welcome to Journeycyprus how can we help you?">
+                        <i class="bi bi-whatsapp"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/journey_of_wonder?igsh=eHgzcXUyZWZ0Mjcw">
+                        <i class="icon-8"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://m.me/Journey-of-wonder">
+                        <i class="bi bi-messenger"></i>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
                 <!-- Widget Slider -->
                 <script src="app/js/jquery.min.js"></script>
                 <script src="app/js/jquery.nice-select.min.js"></script>
