--- a/home2.html
+++ b/home2.html
@@ -863,7 +863,7 @@
                                 <div class="">
                                     <span
                                         class="sub-title-heading text-main fs-28-46 font-yes wow fadeInUp animated">Explore
-                                        the Cyprus</span>
+                                         Cyprus</span>
                                     <h2 class="title-heading wow fadeInUp animated">Our Services<br><span
                                             class="text-gray font-yes">Journey</span> of Wonder</h2>
                                 </div>
@@ -1100,7 +1100,7 @@
                 </li>
                 <li class="flex-three">
                     <i class="icon-Group-9"></i>
-                    <p class="phones" > +357 95 11 29 20 </p>
+                    <span style="color: black;" > +357 95 11 29 20 </span>
                 </li>
                 <li class="flex-three">
                     <i class="icon-Layer-19"></i>
@@ -1115,7 +1115,7 @@
                 </li>
                 <li>
                     <a href="https://wa.me/+357 95 11 29 20?text=Welcome to Journeycyprus how can we help you?">
-                        <i class="icon-icon-1"></i>
+                        <i class="bi bi-whatsapp"></i>
                     </a>
                 </li>
                 <li>
@@ -1125,7 +1125,7 @@
                 </li>
                 <li>
                     <a href="https://m.me/Journey-of-wonder">
-                        <i class="icon-6"></i>
+                        <i class="bi bi-messenger"></i>
                     </a>
                 </li>
             </ul>
